--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,9 @@ body {
 
 h1 {
     text-align: center;
+    color: blue;
+    font-family: verdana;
+    font-size: 300%;
     margin: 35px 0 20px 0 !important;
 }
 
