--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,9 @@ body {
 }
 
 h1 {
-
+    text-align: left;
+    font-family: verdana;
+    color: blue;
     font-size: 300%;
     margin: 35px 0 20px 0 !important;
 }
