--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 
 
-body {background-color: #D4E5FA}
+body {background-color: #8ebcf1}
 
 h1 {color: aliceblue;
  text-decoration: underline;
