--- a/styles.css
+++ b/styles.css
@@ -19,4 +19,5 @@ h4{ color: aliceblue; font-family: Consolas, "Andale Mono", "Lucida Console", "L
 
 table, th, td {
   border: 5px solid rgb(255, 255, 255);
+  color: aliceblue; font-family: Consolas, "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", Monaco, "Courier New", "monospace"; font-size: 40px;
 }
