--- a/styles-2.css
+++ b/styles-2.css
@@ -1,4 +1,5 @@
 body {
+    background-color: #8ebcf1
     font-family: Inter, Helvetica, Arial, sans-serif;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
